      -U/--upstream option is given.
    + On Ubuntu, don't copy the previous distribution name for a new changelog
      entry. Use the Ubuntu devel release.
    + Don't use NMU versioning for NMUs / Security uploads on Ubuntu.
    + dch --increment changes XbuildY to Xubuntu1 on Ubuntu (LP: #690230).
    + Try to guess the vendor based on the given distribution name (LP: #723715)

  [ Stefano Rivera ]
  * devscripts.Logger Don't substitute arguments into logged strings unless
    they were provided. (LP: #968129)
  * debchange: Use distro-info to determine Ubuntu release names (LP: #997932).
  * Incorporate Ubuntu's delta:
    Move debian-keyring, equivs, libcrypt-ssleay-perl, and libsoap-lite-perl
    to Suggests when building on Ubuntu.

  [ Salvatore Bonaccorso ]
  * bts: When searching for usertags use tag= in the url (followed by
    the options containing users=). (Closes: #675071).

  [ Raphael Geissert ]
  * dget: ignore duplicate repository URLs. (Closes: #675258)

 -- Benjamin Drung <bdrung@debian.org>  Mon, 28 May 2012 17:14:12 +0200

devscripts (2.11.7) unstable; urgency=low

  [ James McCoy ]
  * bts:
    + Generate a proper Cc field with "reassign … . done …".  (Closes:
      #668132)
    + Document -m as an alias for show's --mbox.  (Closes: #670107)
  * debchange:
    + Remove EOLed releases Lenny and Maverick.
    + Change DEBCHANGE_RELEASE_HEURISTIC default to "changelog".
    + Correctly handle NMU detection when there is no whitespace after a comma
      in Uploaders.  (Closes: #642342)
  * mergechanges: Handle continuation lines correctly.  Thanks to Ben
    Hutchings for the patch.  (Closes: #656415)
  * debcheckout: Allow specifying a branch for Vcs-Git fields.  Thanks to
    Bernhard R. Link for the patch.  (Closes: #655085, #600745)
  * d/control: Change Maintainer address to devscripts-devel@lists.alioth.d.o
  * wnpp-alert: Use dpkg-query instead of directly parsing dpkg's status file.
    (Closes: #669579)