@@ -37,6 +37,7 @@ devscripts (2.11.8) UNRELEASED; urgency=low
     + Don't use NMU versioning for NMUs / Security uploads on Ubuntu.
     + dch --increment changes XbuildY to Xubuntu1 on Ubuntu (LP: #690230).
     + Try to guess the vendor based on the given distribution name (LP: #723715)
+    + Prefer UBUMAIL over DEBEMAIL on Ubuntu (LP: #929846).
 
   [ Stefano Rivera ]
   * devscripts.Logger Don't substitute arguments into logged strings unless
